[package]
name = "hildeguard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptographic primitives
aes-gcm = "0.10"                                                             # AES-GCM encryption
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "digest"] }

sha2 = "0.10" # SHA-256 hashing
rand = "0.8"  # Secure random number generation

# Error handling
thiserror = "1.0" # Error handling for cleaner code

# Serialization (optional, if you want to store/load data)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"                                        # Ensures hex encoding is available
