[package]
name = "hildeguard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptographic primitives
aes-gcm = "0.10"                                                             # AES-GCM encryption
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "digest"] }

sha2 = "0.10" # SHA-256 hashing
rand = "0.8"  # Secure random number generation

# Error handling
thiserror = "1.0" # Error handling for cleaner code

# Serialization (optional, if you want to store/load data)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"                                        # Ensures hex encoding is available

criterion = "0.5"

# Add this:
[lib]
name = "hildeguard"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false    # Allows using `criterion`

[profile.bench]
inherits = "release"
opt-level = 3        # Maximum optimizations
debug = false        # Ensure no debug symbols
lto = true           # Link Time Optimization
codegen-units = 1    # Ensures better optimization at the cost of compile time
