[package]
name = "hildeguard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptographic primitives
aes-gcm = "0.10"
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "digest"] }

sha2 = "0.10"
rand = "0.8"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "test-util",
] }

# Parallel processing
rayon = "1.7"

# HTTP Framework - Actix Web
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
actix-rt = "2.9"

# Benchmarking
criterion = "0.5"

[lib]
name = "hildeguard"
path = "src/lib.rs"

[[bin]]
name = "actix_server"
path = "src/actix_server.rs"

[[bin]]
name = "actix_ratelimiter"
path = "src/actix_ratelimiter.rs"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "opt_out_benchmark"
harness = false

[[bench]]
name = "bench_setup"
harness = false

[profile.bench]
inherits = "release"
opt-level = 3
debug = false
lto = true
codegen-units = 1
